src/modules/70-pipeline/components/AbstractNode/Nodes/DefaultNode/DefaultNode.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.defaultNode {
  display: block;
  width: fit-content;
  height: 80px;
  cursor: default;

  &.draggable {
    cursor: move;
  }

  .defaultCard {
    cursor: pointer;
    margin: 0;
    position: relative;
    background-color: var(--white);
    border-radius: 8px;
    width: 64px;
    height: 64px;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 2px 4px 0px #60617029;

    &.selected {
      background: linear-gradient(123.92deg, #0092e4 32.53%, #0778fc 112.21%);
      border-color: var(--diagram-selected);
      background: var(--pipeline-selected-node);
      border-width: 2px;
    }
  }

  &:hover {
    .defaultCard {
      box-shadow: 0px 8px 16px 0px #60617029;
    }
  }

  &:hover .closeNode {
    opacity: 1;
    pointer-events: initial;
  }

  .secondaryIcon {
    position: absolute;
    bottom: 2px;
    right: 2px;
  }
  .tertiaryIcon {
    position: absolute;
    top: -10px;
    left: -10px;
    background: var(--pipeline-barrier-yellow) !important;
    border: 2px solid #fff;
    border-radius: 50%;
    padding: 1px !important;
  }

  .inComplete {
    position: absolute;
    top: 2px;
    right: 2px;
  }

  .template {
    position: absolute;
    top: 5px;
    left: 5px;
  }

  .conditional {
    position: absolute;
    top: -10px;
    left: 5px;
    color: var(--white) !important;

    svg {
      path,
      circle {
        fill: currentColor !important;
      }
      rect {
        // TODO: Replace color once it is available in UIKit
        stroke: #f79400 !important;
      }
    }
  }

  .iconGroup {
    display: inline;
    :global(.bp3-icon) {
      padding: var(--spacing-small);
    }
  }

  .closeNode {
    --icon-padding: 0 !important;
    position: absolute;
    top: 0;
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.2s ease-in-out;
    display: flex;
    justify-content: center;
    left: -15px;
    background-color: var(--primary-7) !important;
    min-width: 14px !important;
    min-height: 14px !important;
    height: 14px !important;
    padding: 0 !important;
    align-items: center;
    z-index: 1;
    cursor: pointer;

    :global {
      span.bp3-icon {
        color: var(--white) !important;
      }
    }
  }

  .addNode {
    background: var(--white);
    border: 2px dashed var(--grey-400);
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    margin: 0;
    box-shadow: -1px 4px 7px 0 rgba(135, 149, 159, 0.27);
  }
}

:global {
  .bp3-popover-content p {
    white-space: break-spaces !important;
  }
}

.hoverName {
  :global {
    .bp3-popover-content p {
      max-width: 200px !important;
    }
  }
}

.addNodeIcon {
  height: 30px;
  position: relative;
  width: 30px;
  display: inline;
  top: -70px;
  opacity: 0;
  border-radius: 50%;
  padding: 2px;
  &:hover {
    opacity: 1;
    cursor: pointer;
    border-radius: 50%;
    background: var(--primary-7);
  }
  &.left {
    left: -50px;
  }
  &.right {
    right: -80px;
  }
}

.showIcon {
  opacity: 1;
}
.markerStart {
  width: 20px;
  height: 24px;
  position: relative;
  top: 2px;
  left: -20px;
  z-index: 99;
}

.markerEnd {
  width: 20px;
  height: 20px;
  position: relative;
  top: 0;
  right: -20px;
  z-index: 99;
}

